--- a/styles/style.css
+++ b/styles/style.css
@@ -78,7 +78,11 @@ body{
     font-size: 14px;
     font-weight: 600;
     line-height: 24px; 
-    text-decoration-line: underline;
+  }
+
+  .nav__item{
+    padding-bottom: 8px;
+    border-bottom:1px solid #fff;
   }
   
   .link:hover{
@@ -126,10 +130,6 @@ body{
     padding-top: 8px;
 }
 
-.link__1{
-  color: #000;
-  align-items: center;
-}
 
 .link__1:hover{
     color:blue;
@@ -307,8 +307,10 @@ body{
     font-weight: 500;
     line-height: 24px; 
     align-items: center;
-    text-decoration-line: underline;
+    text-decoration:none;
 }
+
+.nom
 
 .now:hover{
     cursor: pointer;
@@ -378,6 +380,11 @@ body{
     color:blue;
 }
 
+.block img:hover{
+    transform: scale(1.1);
+    transition: all 2s ,ease 0;
+}
+
 .block img{
     margin-bottom: 16px;
 }
@@ -407,7 +414,7 @@ body{
     font-size: 16px;
     font-weight: 500;
     line-height: 24px;
-    text-decoration-line: strikethrough;
+    text-decoration-line:line-through;
     opacity: 0.5;
 }
 
@@ -490,6 +497,19 @@ body{
     gap: 16px;
     border-radius: 4px;
     border: 1px solid rgba(0, 0, 0, 0.30);
+    box-shadow: 0px 17px 10px 1px rgba(0, 0, 0, 0.30);
+}
+
+.Frame__597:hover{
+    cursor: pointer;
+    transform:scale(1.1);
+    transition:all 2s ease 0s;
+}
+
+.Frame__596:hover{
+    cursor: pointer;
+    transform:scale(1.1);
+    transition:all 2s ease 0s;
 }
 
 .Frame__597 p{
@@ -512,7 +532,7 @@ body{
     gap: 16px;
     border-radius: 4px;
     background: var(--Secondary-2, #DB4444);
-    box-shadow: 0px 1px 13px 0px rgba(0, 0, 0, 0.05);
+    box-shadow: 0px 17px 10px 1px rgba(0, 0, 0, 0.30);
 }
 
 
@@ -654,11 +674,15 @@ body{
     height: 600px;
     padding: 89px 30px 0px 29px;
     border-radius: 4px;
+    overflow: hidden;
 }
 .Frame__684{
     background:url(/images/ps5-slim-goedkope-playstation_large\ 1.png) no-repeat;
     padding: 356px 296px 32px 32px;
 }
+
+
+
 
 .Frame__684 h2{
     color: var(--Text, #FAFAFA);
@@ -668,6 +692,7 @@ body{
     letter-spacing: 0.72px;
     margin-bottom: 16px;
 }
+
 
 .Frame__684 p{
     width: 242px;
@@ -687,6 +712,16 @@ body{
     background: url(/images/rasm.png) ;
     margin-bottom: 32px;
 
+}
+
+.fname__638 a{
+    text-decoration:none;
+}
+
+.fname__638 a:hover{
+    transition-duration:2s;
+    cursor: pointer;
+    color:rgb(247, 56, 56);
 }
 .fname__638 h2{
     color: var(--Text, #FAFAFA);
@@ -709,6 +744,7 @@ body{
 .fname__690{
     display: flex;
     gap: 30px;
+    overflow: hidden;
 }
 
 
@@ -755,6 +791,13 @@ body{
     line-height: 24px;
     padding-left: 30px;
     margin-bottom: 20px;
+    text-decoration:none;
+}
+
+.fname__688 a:hover{
+    transition-duration:2s;
+    cursor: pointer;
+    color:rgb(247, 56, 56);
 }
 
 .fname__687{
@@ -800,7 +843,14 @@ body{
     font-weight: 500;
     line-height: 24px;
     padding-left: 30px;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
+    text-decoration:none;
+}
+
+.fname__687 a:hover{
+    transition-duration:2s;
+    cursor: pointer;
+    color:rgb(247, 56, 56);
 }
 /* Frame__701 */
 
@@ -817,6 +867,13 @@ body{
     font-weight: 600;
     line-height: 28px;
     margin-bottom: 8px;
+}
+
+.Frame__702 img:hover{
+    transition:all 2s ease 0s;
+    transform:rotate(0deg);
+    transform:rotate(360deg);
+    cursor: pointer;
 }
 
 .Frame__702 span{
