--- a/styles/style.css
+++ b/styles/style.css
@@ -255,7 +255,7 @@ body{
     width: 892px;
     height: 344px;
     flex-shrink: 0;
-    background: url(/images/hero_endframe__cvklg0xk3w6e_large\ 2.png) no-repeat right;
+    background: url(/Home/images/hero_endframe__cvklg0xk3w6e_large\ 2.png) no-repeat right;
     gap: 38px;
     background-color: #000;
 }
@@ -677,7 +677,7 @@ body{
     overflow: hidden;
 }
 .Frame__684{
-    background:url(/images/ps5-slim-goedkope-playstation_large\ 1.png) no-repeat;
+    background:url(/Home/images/ps5-slim-goedkope-playstation_large\ 1.png) no-repeat;
     padding: 356px 296px 32px 32px;
 }
 
@@ -709,7 +709,7 @@ body{
     height: 284px;
     border-radius: 4px;
     background: #0D0D0D;
-    background: url(/images/rasm.png) ;
+    background: url(/Home/images/rasm.png) ;
     margin-bottom: 32px;
 
 }
